Fix overflows for mobile

--- a/src/components/Home/OutcomesDiagram.scss
+++ b/src/components/Home/OutcomesDiagram.scss
@@ -1,6 +1,8 @@
 .outcomes-diagram {
   padding: 120px 0;
+
   .diagram {
+    overflow: hidden;
 
     .circle {
       width: 650px;
